Mas colores y routing.

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="keywords"
+      content="anime, naruto, dragon ball, jujutsu kaisen, shingeki no kyojin, kimetsu no yaiba, one piece"
     />
-
+    <meta
+      name="description"
+      content="Tost Shop, es una tienda de anime donde podes encontrar desde ropa a coleccionables, desde Bleach hasta Demon Slayer."
+    />
     <title>Trost Shop</title>
   </head>
   <body>
