--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="description"
-      content="Tost Shop, es una tienda de anime donde podes encontrar desde ropa a coleccionables, desde Bleach hasta Demon Slayer."
+      content="Trost Shop, es una tienda de anime donde podes encontrar desde ropa a coleccionables, desde Bleach hasta Demon Slayer."
     />
     <title>Trost Shop</title>
   </head>
